# raschka-llm-learning-journey

./: .gitignore  .pre-commit-config.yaml  CHAPTER_2_SUMMARY.md  CHAPTER_3_SUMMARY.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  sample.txt
docs/learning-notes/: README.md
experiments/: README.md
experiments/exp-001/: config.yaml  run.sh
notebooks/: README.md
notes/concepts/: README.md  linkedin_visual.py  transpose_demo.py  transpose_explanation.md
src/raschka_llm/: __init__.py  __main__.py  bpe_tokenizer.py  dataloader.py  gpt_model.py  self_attention.py  tokenizer.py
tests/: test_dataloader.py  test_tokenizer.py
