[project]
name = "raschka-build-llm-learning"
version = "0.0.1"
description = "Learning repo: build LLM from Raschka's book"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "pre-commit", "flake8"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
